--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
     <input id="name" placeholder="Full Name">
     <input id="email" placeholder="Email">
     <input id="phone" placeholder="Phone Number">
-    <textarea id="agreement" readonly rows="8">RENTAL AGREEMENT AND COLLATERAL TERMS
+    <textarea id="agreement" readonly rows="12">RENTAL AGREEMENT AND COLLATERAL TERMS
 
-By signing below, I, [Customer Name], agree to rent one (1) pair of wireless headphones from SE2 Silent Disco DBA SE2 Events INC. ("the Company") for use during the event on [Date]. I acknowledge that the headphones remain the property of the Company and must be returned in good working condition at the end of the event or upon request.
+By signing below, I, [Customer Name], agree to rent one (1) pair of wireless headphones from SE2 Silent Disco DBA and SE2 Events Inc. ("the Company") for use during the event on [Date]. I acknowledge that the headphones remain the property of the Company and must be returned in good working condition at the end of the event or upon request.
 
 I understand and agree that failure to return the headphones by the end of the event will result in a replacement fee of $100.00 USD ("Replacement Fee"). I authorize the Company to charge my credit card, provided below, the Replacement Fee if the headphones are not returned or are returned damaged beyond normal wear and tear.
+
+LIABILITY RELEASE: I hereby release, waive, discharge, and agree not to sue SE2 Silent Disco DBA and SE2 Events Inc., its officers, employees, agents, or affiliates ("Released Parties") from any and all liability, claims, demands, actions, or causes of action arising out of or related to any loss, damage, or injury, including death, that may be sustained by me or my property while using the headphones or attending the event, whether caused by the negligence of the Released Parties or otherwise. I assume full responsibility for any risk of bodily injury, death, or property damage arising from my use of the headphones and participation in the event.
+
+MARKETING CONSENT: I grant SE2 Silent Disco DBA and SE2 Events Inc. permission to use my email address and phone number provided herein for marketing purposes, including but not limited to sending promotional offers, event updates, and newsletters. I understand I may opt out of these communications at any time by following the unsubscribe instructions provided in such messages.
+
+PHOTO/VIDEO CONSENT: I consent to being photographed or recorded in video or audio by SE2 Silent Disco DBA and SE2 Events Inc. during the event. I grant the Company full permission to use, reproduce, publish, and distribute such photographs, videos, or recordings, including my likeness, voice, or image, for marketing, advertising, or promotional purposes in any medium, without compensation or further notice to me.
 
 This agreement constitutes a legally binding contract. I acknowledge that I have read and understood these terms, and I sign this agreement voluntarily under no duress. Any disputes arising from this agreement shall be governed by the laws of New York, USA.</textarea>
     <canvas id="signaturePad" width="300" height="150"></canvas>
@@ -252,33 +258,4 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const mime = header.match(/:(.*?);/)[1];
       const binary = atob(data);
       const array = [];
-      for (let i = 0; i < binary.length; i++) {
-        array.push(binary.charCodeAt(i));
-      }
-      return new Blob([new Uint8Array(array)], { type: mime });
-    }
-
-    function returnHeadphone() {
-      const id = document.getElementById('returnId').value;
-      if (!id) {
-        alert('Please scan a headphone!');
-        return;
-      }
-      if (headphones[id] && headphones[id].status === 'checked_out') {
-        headphones[id].status = 'returned';
-        headphones[id].pre_auth = null;
-        localStorage.setItem('headphones', JSON.stringify(headphones));
-        alert(`Headphone ${id} returned!`);
-        clearForm('return');
-        showReturn();
-      } else {
-        alert('Headphone not found or not checked out!');
-      }
-    }
-
-    function clearForm(formId) {
-      document.getElementById(formId).querySelectorAll('input').forEach(input => input.value = '');
-    }
-  </script>
-</body>
-</html>
+      for (let i = 0; i < binary
