--- a/index.html
+++ b/index.html
@@ -272,4 +272,234 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       function stopDrawing() {
         if (drawing) {
           drawing = false;
-          signature
+          signatureData = canvas.toDataURL();
+        }
+      }
+
+      function getPosition(e) {
+        const rect = canvas.getBoundingClientRect();
+        const touch = e.touches ? e.touches[0] : e;
+        return {
+          x: touch.clientX - rect.left,
+          y: touch.clientY - rect.top
+        };
+      }
+    }
+
+    function clearSignature() {
+      const canvas = document.getElementById('signaturePad');
+      const ctx = canvas.getContext('2d');
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      signatureData = null;
+    }
+
+    async function checkout() {
+      const id = document.getElementById('headphoneId').value;
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const phone = document.getElementById('phone').value;
+      const date = new Date().toLocaleDateString();
+
+      if (!id || !name || !email || !phone || !signatureData || !cardElement) {
+        alert('Please fill all fields, enter card details, and sign the agreement!');
+        return;
+      }
+
+      const agreementText = document.getElementById('agreement').value
+        .replace('[Customer Name]', name)
+        .replace('[Date]', date);
+
+      if (headphones[id] && headphones[id].status === 'checked_out') {
+        alert('This headphone is already checked out!');
+        return;
+      }
+
+      try {
+        console.log('Starting card tokenization...');
+        const result = await cardElement.tokenize();
+        console.log('Tokenization result:', result);
+        if (result.status !== 'OK') throw new Error('Card tokenization failed: ' + (result.errors?.[0]?.message || 'Unknown error'));
+        const paymentToken = result.token;
+        console.log('Payment token:', paymentToken);
+
+        console.log('Sending preauthorization request...');
+        const preauthResponse = await fetch('/.netlify/functions/preauthorize', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            sourceId: paymentToken,
+            amount: 10000,
+            currency: 'USD',
+            locationId: 'LQ7MAQD7N37E5'
+          })
+        });
+
+        const preauthResult = await preauthResponse.json();
+        console.log('Preauthorization response:', preauthResult);
+        if (!preauthResponse.ok) throw new Error(preauthResult.error || 'Preauthorization failed');
+        const preauthId = preauthResult.paymentId;
+
+        headphones[id] = {
+          status: 'checked_out',
+          customer: { name, email, phone },
+          agreement: { text: agreementText, signature: signatureData, amount: 100, date: date },
+          pre_auth: { pre_auth_id: preauthId, amount: 100 }
+        };
+        localStorage.setItem('headphones', JSON.stringify(headphones));
+
+        console.log('Sending email...');
+        const emailResponse = await fetch('/.netlify/functions/send-email', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            name: name,
+            email: email,
+            agreement: agreementText,
+            signature: signatureData,
+            preauthId: preauthId
+          })
+        });
+
+        if (emailResponse.ok) {
+          alert(`Headphone ${id} checked out! Agreement emailed to ${email}. Preauthorization completed.`);
+        } else {
+          throw new Error('Email failed');
+        }
+      } catch (error) {
+        console.error('Checkout error:', error.message);
+        alert('Checkout successful, but an error occurred: ' + error.message);
+      }
+      clearForm('checkout');
+      clearSignature();
+      showCheckout();
+    }
+
+    function returnHeadphone() {
+      const id = document.getElementById('returnId').value;
+      if (!id) {
+        alert('Please scan a headphone!');
+        return;
+      }
+      if (headphones[id] && headphones[id].status === 'checked_out') {
+        headphones[id].status = 'returned';
+        headphones[id].pre_auth = null;
+        localStorage.setItem('headphones', JSON.stringify(headphones));
+        alert(`Headphone ${id} returned!`);
+        clearForm('return');
+        showReturn();
+      } else {
+        alert('Headphone not found or not checked out!');
+      }
+    }
+
+    function dashboardCheckout(id) {
+      if (headphones[id]) {
+        alert(`Headphone ${id} is already checked out or returned. Use the Checkout form for new rentals.`);
+        return;
+      }
+      headphones[id] = { 
+        status: 'checked_out', 
+        customer: { name: 'Manual', email: 'manual@example.com', phone: 'N/A' }, 
+        agreement: { date: new Date().toLocaleDateString() },
+        pre_auth: null 
+      };
+      localStorage.setItem('headphones', JSON.stringify(headphones));
+      alert(`Headphone ${id} checked out manually!`);
+      updateDashboard();
+    }
+
+    function dashboardCheckin(id) {
+      if (headphones[id] && headphones[id].status === 'checked_out') {
+        headphones[id].status = 'returned';
+        headphones[id].pre_auth = null;
+        localStorage.setItem('headphones', JSON.stringify(headphones));
+        alert(`Headphone ${id} checked in manually!`);
+        updateDashboard();
+      } else {
+        alert(`Headphone ${id} is not checked out!`);
+      }
+    }
+
+    async function dashboardCharge(id) {
+      if (headphones[id] && headphones[id].status === 'checked_out' && headphones[id].pre_auth) {
+        const confirmCharge = confirm(`Are you sure ${headphones[id].customer.name} did not return headphone ${id}? This will charge their card $100.`);
+        if (confirmCharge) {
+          try {
+            const chargeResponse = await fetch('/.netlify/functions/capture-payment', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({
+                paymentId: headphones[id].pre_auth.pre_auth_id,
+                amount: headphones[id].pre_auth.amount
+              })
+            });
+            const chargeResult = await chargeResponse.json();
+            if (!chargeResponse.ok) throw new Error(chargeResult.error || 'Charge failed');
+            headphones[id].status = 'charged';
+            headphones[id].pre_auth = null;
+            localStorage.setItem('headphones', JSON.stringify(headphones));
+            alert(`Headphone ${id} charged successfully!`);
+            updateDashboard();
+          } catch (error) {
+            alert(`Charge failed for ${id}: ${error.message}`);
+          }
+        }
+      } else {
+        alert(`Cannot charge for ${id}: Not checked out or no preauthorization available.`);
+      }
+    }
+
+    function updateDashboard() {
+      const tbody = document.getElementById('headphoneList');
+      const searchTerm = document.getElementById('searchInput').value.toLowerCase();
+      const dateFilter = document.getElementById('dateFilter').value;
+      tbody.innerHTML = '';
+      Object.keys(headphones).forEach(id => {
+        const hp = headphones[id];
+        const statusText = hp.status === 'checked_out' ? 'Checked Out' : hp.status === 'returned' ? 'Returned' : 'Charged';
+        const rowData = [
+          hp.customer?.name || 'N/A',
+          statusText,
+          hp.pre_auth ? 'Hold' : 'Released',
+          hp.customer?.email || 'N/A',
+          hp.customer?.phone || 'N/A',
+          id,
+          hp.agreement?.date || 'N/A'
+        ];
+        if (
+          rowData.some(data => data.toLowerCase().includes(searchTerm)) &&
+          (!dateFilter || hp.agreement?.date === dateFilter)
+        ) {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>
+              <button class="checkout-btn" onclick="dashboardCheckout('${id}')">Check Out</button>
+              <button class="checkin-btn" onclick="dashboardCheckin('${id}')">Check In</button>
+              <button class="charge-btn" onclick="dashboardCharge('${id}')">Charge</button>
+            </td>
+            <td>${hp.customer?.name || 'N/A'}</td>
+            <td>${statusText}</td>
+            <td>${hp.pre_auth ? 'Hold' : 'Released'}</td>
+            <td>${hp.customer?.email || 'N/A'}</td>
+            <td>${hp.customer?.phone || 'N/A'}</td>
+            <td>${id}</td>
+          `;
+          tbody.appendChild(row);
+        }
+      });
+    }
+
+    function searchHeadphones() {
+      updateDashboard();
+    }
+
+    function filterByDate() {
+      updateDashboard();
+    }
+
+    function clearForm(formId) {
+      document.getElementById(formId).querySelectorAll('input').forEach(input => input.value = '');
+    }
+  </script>
+</body>
+</html>
